--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 .env.*.php
 .env.php
 .env
+/nbproject/private/
+/vendor
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+npm-debug.log
+yarn-error.log
+.env
